# CaZe

./: .gitignore  Infra.tf  Makefile  README.md  pyproject.toml  requirements.txt
analisys/: DataAnalisys.ipynb  Model.ipynb  ModelUtitls.py  SqliteMaker.py  pyproject.toml
src/: Dockerfile  app.py  docker-compose.yml  pyproject.toml
src api/: app.py
src api/volume/: model_V1.pkl
src/volume/: model_V1.pkl
volume/: House_Pricing_Raw_V1.html  db.sqlite
