[tool.poetry]
name = "ml_analisys"
version = "0.1.0"
description = ""
authors = ["FelipeOliveira <felipe.oliveira@kunumi.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
ipykernel = "^6.13.0"
install = "^1.3.5"
db-sqlite3 = "^0.0.1"
SQLAlchemy = "^1.4.35"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
phik = "^0.12.2"
pandas-profiling = "^3.1.0"
ipywidgets = "^7.7.0"
python-dotenv = "^0.20.0"
sklearn = "^0.0"
scikit-plot = "^0.3.7"
xgboost = "^1.6.0"
lightgbm = "^3.3.2"
pickle4 = "^0.0.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
